# AuthHandler.py
@@ -2,11 +2,12 @@ import requests
 from flask import request, jsonify, make_response, abort
 import json
 
+
 #https://web.socem.plymouth.ac.uk/COMP2001/auth/api/users
 
 
 
-def Userlogin(LoginInfo):
+def Userlogin(LoginInfo):  
     url = "https://web.socem.plymouth.ac.uk/COMP2001/auth/api/users"
 
     # Parse the LoginInfo JSON string into a Python dictionary
